# loadout-manager

./: .eslintrc  .gitignore  .prettierrc  Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
.storybook/: main.ts
loadout-server/: Cargo.toml
loadout-server/src/: main.rs
src/: App.module.scss  App.module.scss.d.ts  App.tsx  OauthButton.tsx  OauthButtons.tsx  Root.tsx  SimpleButton.tsx  _variable.scss  dev-setup.ts  fa-subset.mjs  index.tsx  main-styles.ts  style.d.ts  token.ts  vite-env.d.ts  wdyr.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: fetch.rs  http.rs  lib.rs  main.rs  oauth.rs  state.rs  storage.rs  util.rs
src-tauri/src/fetch/: error.rs  mod.rs  routing.rs
src-tauri/src/http/: mod.rs  oauth.rs  token.rs
src-tauri/src/model/: application.rs  mod.rs  util.rs
src-tauri/src/model/destiny/: profile.rs
src-tauri/src/model/user/: general.rs  info.rs  mod.rs
src-tauri/src/plugins/: log.rs  mod.rs  shadows.rs  storage.rs  window_state.rs
src/assets/icons/: BattleNet.ts  Epic.ts  Hunter.ts  Library.mjs  Library.mjs.d.ts  Stadia.ts  index.ts  utils.ts
src/assets/styles/: _index.scss
src/components/: CharacterMenu.tsx  Login.tsx  User.tsx  index.ts
src/components/Header/: Header.module.scss  Header.module.scss.d.ts  Header.tsx  index.tsx
src/components/Login/: Login.module.scss  Login.module.scss.d.ts  Login.tsx  index.ts  index.tsx  styles.ts
src/components/OAuthButton/: OAuthButton.tsx  index.ts  token.ts
src/components/PageLoading/: PageLoading.module.scss  PageLoading.module.scss.d.ts  PageLoading.tsx  index.ts  index.tsx  styles.ts
src/components/utility/: ClickOutside.tsx  ClickOutsideRoot.tsx  ErrorBoundary.tsx  LocationSwitcher.tsx  ScrollToTop.tsx  ShowPageLoading.tsx  index.ts
src/components/utility/PageWithMenu/: PageWithMenu.module.scss  utils.ts
src/fetch/: user.ts
src/locale/: en.json
src/models/: AuthorizationToken.ts  application.ts  base.ts  index.ts  user.ts
src/models/destiny2/: profile.ts
src/models/user/: general.ts  info.ts
src/pages/: index.ts
src/pages/Login/: Login.module.scss.d.ts  Login.tsx  index.ts
src/pages/Settings/: Select.tsx  Settings.scss  Settings.tsx  index.ts  initial-settings.ts
src/plugins/: Log.ts  Store.ts
src/store/: index.ts  reducers.ts  thunk.ts  types.ts
src/store/account/: actions.ts  index.ts  platform.ts  selectors.ts  types.ts
src/store/shell/: actions.ts  index.ts  selectors.ts
src/stories/: Button.tsx  Header.tsx  Login.stories.tsx  Login.tsx  Page.stories.tsx  Page.tsx
src/utils/: hooks.ts  i18n.ts  index.ts  observable.ts  token.ts
storage/: Cargo.toml  package.json
storage/src/: error.rs  lib.rs  store.rs
storage/webview-dist/: index.d.ts  index.min.js  index.mjs
storage/webview-src/: index.ts  rollup.config.js  tsconfig.json
