[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv = "0.15"
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1"
byte-unit = "4.0"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
futures-util = "0.3"
log = "0.4"
oauth2 = "4.2.3"
once_cell = "1.13"
pin-project-lite = "0.2.9"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["shell-open"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
url = "2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
