[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv = "0.15"
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1"
bincode = "1.3"
byte-unit = "4.0"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
futures-util = "0.3"
log = "0.4"
oauth2 = "4.2.3"
once_cell = "1.13"
pin-project-lite = "0.2.9"
raw-window-handle = "0.5"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.6", features = ["shell-open"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
url = "2.2"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
